@@ -1,6 +1,7 @@
 TheMightyDude (14 February 2013)
 --------------------------------------
 Fixed PHP Notice: Use of undefined constant credits - assumed 'credits' in check_fighters.php on line 113
+Fixed PHP Notice: Trying to get property of non-object in includes/db_kill_player.php on line 46
 
 TheKabal (1 March 2013)
 --------------------------------------
